--- a/popularidad de series Jofre.ipynb
+++ b/popularidad de series Jofre.ipynb
@@ -798,13 +798,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_34748\\2659127758.py:10: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_10484\\2659127758.py:10: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax1.set_xticklabels(ax1.get_xticklabels(), rotation=40, ha=\"right\")\n",
-      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_34748\\2659127758.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_10484\\2659127758.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax2.set_xticklabels(ax2.get_xticklabels(), rotation=40, ha=\"right\")\n",
-      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_34748\\2659127758.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_10484\\2659127758.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax3.set_xticklabels(ax3.get_xticklabels(), rotation=40, ha=\"right\")\n",
-      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_34748\\2659127758.py:13: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_10484\\2659127758.py:13: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax4.set_xticklabels(ax4.get_xticklabels(), rotation=40, ha=\"right\")\n"
      ]
     },
@@ -2594,12 +2594,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import LeaveOneOut, StratifiedKFold\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_val_score,KFold\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "import statsmodels.formula.api as sma\n",
@@ -3306,8 +3306,8 @@
       "Dep. Variable:            Popularidad   R-squared:                       0.146\n",
       "Model:                            OLS   Adj. R-squared:                  0.146\n",
       "Method:                 Least Squares   F-statistic:                     3241.\n",
-      "Date:                Tue, 17 Dec 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        16:58:38   Log-Likelihood:            -1.2712e+05\n",
+      "Date:                Thu, 19 Dec 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        09:42:55   Log-Likelihood:            -1.2712e+05\n",
       "No. Observations:               95064   AIC:                         2.542e+05\n",
       "Df Residuals:                   95058   BIC:                         2.543e+05\n",
       "Df Model:                           5                                         \n",
@@ -3877,8 +3877,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error cuadrático medio (MSE): 0.5982785020856622\n",
-      "Coeficiente de determinación (R²): 0.4100729909086942\n",
+      "Error cuadrático medio (MSE): 0.5982785020856624\n",
+      "Coeficiente de determinación (R²): 0.4100729909086941\n",
       "Error absoluto medio (MAE): 0.1216465396835498\n",
       "Error porcentual absoluto medio (MAPE): 2.285932612490601\n"
      ]
@@ -5088,32 +5088,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.12961697, 0.11001501, 0.11828312, 0.12317696, 0.12673676,\n",
+       "       0.12062614, 0.10694833, 0.115522  , 0.09879371, 0.11572839,\n",
+       "       0.13674269, 0.11709118, 0.1256197 , 0.12160085, 0.09933015,\n",
+       "       0.14191282, 0.10921743, 0.11116096, 0.11619897, 0.12240012])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# crear el procedimiento loocv\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Supported target types are: ('binary', 'multiclass'). Got 'continuous' instead.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[90], line 14\u001b[0m\n\u001b[0;32m      7\u001b[0m list_ac\u001b[38;5;241m=\u001b[39m[]\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,kf\u001b[38;5;241m.\u001b[39mget_n_splits(X_forest, y_forest)):\n\u001b[0;32m     13\u001b[0m   \u001b[38;5;66;03m# Calculo de indices\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m   train, test \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mskf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_forest\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_forest\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m[i]\n\u001b[0;32m     15\u001b[0m   \u001b[38;5;66;03m# Separar train y test\u001b[39;00m\n\u001b[0;32m     16\u001b[0m   X_train_n, y_train_n, X_test_n, y_test_n\u001b[38;5;241m=\u001b[39m X_forest[train], y_forest[train], X_forest[test],y_forest[test]\n",
+      "File \u001b[1;32mc:\\Users\\adclean\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:416\u001b[0m, in \u001b[0;36m_BaseKFold.split\u001b[1;34m(self, X, y, groups)\u001b[0m\n\u001b[0;32m    408\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_splits \u001b[38;5;241m>\u001b[39m n_samples:\n\u001b[0;32m    409\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    410\u001b[0m         (\n\u001b[0;32m    411\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot have number of splits n_splits=\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m greater\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    412\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m than the number of samples: n_samples=\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    413\u001b[0m         )\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_splits, n_samples)\n\u001b[0;32m    414\u001b[0m     )\n\u001b[1;32m--> 416\u001b[0m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgroups\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[0;32m    417\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01myield\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\adclean\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:147\u001b[0m, in \u001b[0;36mBaseCrossValidator.split\u001b[1;34m(self, X, y, groups)\u001b[0m\n\u001b[0;32m    145\u001b[0m X, y, groups \u001b[38;5;241m=\u001b[39m indexable(X, y, groups)\n\u001b[0;32m    146\u001b[0m indices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marange(_num_samples(X))\n\u001b[1;32m--> 147\u001b[0m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtest_index\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_iter_test_masks\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgroups\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[0;32m    148\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrain_index\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mindices\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlogical_not\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_index\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m    149\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtest_index\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mindices\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtest_index\u001b[49m\u001b[43m]\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\adclean\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:809\u001b[0m, in \u001b[0;36mStratifiedKFold._iter_test_masks\u001b[1;34m(self, X, y, groups)\u001b[0m\n\u001b[0;32m    808\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_iter_test_masks\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, groups\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m--> 809\u001b[0m     test_folds \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_test_folds\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    810\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_splits):\n\u001b[0;32m    811\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m test_folds \u001b[38;5;241m==\u001b[39m i\n",
+      "File \u001b[1;32mc:\\Users\\adclean\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:752\u001b[0m, in \u001b[0;36mStratifiedKFold._make_test_folds\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    750\u001b[0m allowed_target_types \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinary\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmulticlass\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    751\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m type_of_target_y \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m allowed_target_types:\n\u001b[1;32m--> 752\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    753\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSupported target types are: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m. Got \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m instead.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m    754\u001b[0m             allowed_target_types, type_of_target_y\n\u001b[0;32m    755\u001b[0m         )\n\u001b[0;32m    756\u001b[0m     )\n\u001b[0;32m    758\u001b[0m y \u001b[38;5;241m=\u001b[39m column_or_1d(y)\n\u001b[0;32m    760\u001b[0m _, y_idx, y_inv \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39munique(y, return_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, return_inverse\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mValueError\u001b[0m: Supported target types are: ('binary', 'multiclass'). Got 'continuous' instead."
+     ]
+    }
+   ],
+   "source": [
+    "MAE = make_scorer(mean_absolute_error)\n",
     "skf = StratifiedKFold(n_splits=20, random_state=1, shuffle=True)\n",
     "skf.get_n_splits(X_forest, y_forest)\n",
-    "\n",
+    "kf = KFold(n_splits=20,random_state=1, shuffle=True)\n",
+    "scores= cross_val_score(model_f,X_forest,y_forest,scoring=MAE,cv=kf)\n",
+    "scores\n",
     "list_ac=[]\n",
-    "for i in range(0,skf.get_n_splits(X_forest, y_forest)):\n",
-    "  # Calculo de indices\n",
-    "  train, test = list(skf.split(X_forest, y_forest))[i]\n",
-    "  # Separar train y test\n",
-    "  X_train_n, y_train_n, X_test_n, y_test_n= X_forest[train], y_forest[train], X_forest[test],y_forest[test]\n",
-    "  # Ajustar el modelo\n",
-    "  model.fit(X_train_n, y_train_n)\n",
-    "  # Predicciones\n",
-    "  pred= model.predict(X_test_n)\n",
-    "  # Calculo del error\n",
-    "  accuracy= accuracy_score(y_true=y_test_n, y_pred= pred)\n",
-    "  print('Iteracion: ',i+1, ' Accuracy:', accuracy)\n",
-    "  list_ac.append(accuracy)\n",
-    "# Promedio de accuracy\n",
-    "import numpy as np\n",
-    "print('Accuracy promedio:', np.mean(list_ac))\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#for i in range(0,kf.get_n_splits(X_forest, y_forest)):\n",
+    "#  # Calculo de indices\n",
+    "#  train, test = list(skf.split(X_forest, y_forest))[i]\n",
+    "#  # Separar train y test\n",
+    "#  X_train_n, y_train_n, X_test_n, y_test_n= X_forest[train], y_forest[train], X_forest[test],y_forest[test]\n",
+    "#  # Ajustar el modelo\n",
+    "#  model.fit(X_train_n, y_train_n)\n",
+    "#  # Predicciones\n",
+    "#  pred= model.predict(X_test_n)\n",
+    "#  # Calculo del error\n",
+    "#  accuracy= accuracy_score(y_true=y_test_n, y_pred= pred)\n",
+    "#  print('Iteracion: ',i+1, ' Accuracy:', accuracy)\n",
+    "#  list_ac.append(accuracy)\n",
+    "## Promedio de accuracy\n",
+    "#import numpy as np\n",
+    "#print('Accuracy promedio:', np.mean(list_ac))\n",
+    "#\n",
+    "#"
    ]
   },
   {
@@ -5183,8 +5229,8 @@
     }
    ],
    "source": [
-    "MAE = make_scorer(mean_absolute_error)\n",
-    "scores_regresion = cross_val_score(model, X_regr, y_regr, scoring=MAE, cv=cv, error_score='raise',verbose=1,n_jobs=10)\n",
+    "\n",
+    "#scores_regresion = cross_val_score(model, X_regr, y_regr, scoring=MAE, cv=cv, error_score='raise',verbose=1,n_jobs=10)\n",
     "#scores_forest = cross_val_score(model_f, X_forest, y_forest, scoring=MAE, cv=cv, error_score='raise',verbose=1)\n",
     "#scores_svn = cross_val_score(model_svn, X_svn, y_svn, scoring=MAE, cv=cv, error_score='raise',verbose=1)\n"
    ]
